[project]
name = "backend"
version = "0.1.0"
description = "IS Audit log analysis backend"

requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "litellm>=1.40.0",
    "polars>=1.0.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "python-docx>=1.1.0",
    "aiofiles>=23.0.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
